@@ -132,9 +132,13 @@
   "item.ytech.copper_arrow": "Copper Arrow",
   "item.ytech.copper_axe": "Copper Axe",
   "item.ytech.copper_bolt": "Copper Bolt",
+  "item.ytech.copper_boots": "Copper Boots",
+  "item.ytech.copper_chestplate": "Copper Chestplate",
   "item.ytech.copper_file": "Copper File",
   "item.ytech.copper_hammer": "Copper Hammer",
+  "item.ytech.copper_helmet": "Copper Helmet",
   "item.ytech.copper_hoe": "Copper Hoe",
+  "item.ytech.copper_leggings": "Copper Leggings",
   "item.ytech.copper_mortar_and_pestle": "Copper Mortar and Pestle",
   "item.ytech.copper_pickaxe": "Copper Pickaxe",
   "item.ytech.copper_plate": "Copper Plate",
