@@ -1,5 +1,6 @@
 {
   "values": [
-    "#ytech:boots/bronze"
+    "#ytech:boots/bronze",
+    "#ytech:boots/copper"
   ]
 }
