@@ -1,5 +1,6 @@
 {
   "values": [
-    "#ytech:chestplates/bronze"
+    "#ytech:chestplates/bronze",
+    "#ytech:chestplates/copper"
   ]
 }
