@@ -1,5 +1,6 @@
 {
   "values": [
-    "#ytech:helmets/bronze"
+    "#ytech:helmets/bronze",
+    "#ytech:helmets/copper"
   ]
 }
