@@ -1,5 +1,6 @@
 {
   "values": [
-    "#ytech:leggings/bronze"
+    "#ytech:leggings/bronze",
+    "#ytech:leggings/copper"
   ]
 }
