@@ -1,0 +1,5 @@
+{
+  "values": [
+    "ytech:copper_boots"
+  ]
+}
