@@ -135,7 +135,7 @@ public enum MaterialItemType implements INameable, IMaterialModel<Holder.ItemHol
             MaterialItemType::basicArmorModelProvider,
             IRecipe::noRecipe,
             MaterialItemType::registerMaterialTag,
-            Utils.exclude(MaterialType.ALL_HARD_METALS, MaterialType.COPPER, MaterialType.IRON)),
+            Utils.exclude(MaterialType.ALL_HARD_METALS, MaterialType.IRON)),
     CHESTPLATE("chestplate", INameable.suffix("chestplate"), INameable.suffix("Chestplate"),
             (material) -> ItemTags.create(Utils.modLoc("chestplates/" + material.key)),
             Tags.Items.ARMORS_CHESTPLATES,
@@ -144,7 +144,7 @@ public enum MaterialItemType implements INameable, IMaterialModel<Holder.ItemHol
             MaterialItemType::basicArmorModelProvider,
             IRecipe::noRecipe,
             MaterialItemType::registerMaterialTag,
-            Utils.exclude(MaterialType.ALL_HARD_METALS, MaterialType.COPPER, MaterialType.IRON)),
+            Utils.exclude(MaterialType.ALL_HARD_METALS, MaterialType.IRON)),
     LEGGINGS("leggings", INameable.suffix("leggings"), INameable.suffix("Leggings"),
             (material) -> ItemTags.create(Utils.modLoc("leggings/" + material.key)),
             Tags.Items.ARMORS_LEGGINGS,
@@ -153,7 +153,7 @@ public enum MaterialItemType implements INameable, IMaterialModel<Holder.ItemHol
             MaterialItemType::basicArmorModelProvider,
             IRecipe::noRecipe,
             MaterialItemType::registerMaterialTag,
-            Utils.exclude(MaterialType.ALL_HARD_METALS, MaterialType.COPPER, MaterialType.IRON)),
+            Utils.exclude(MaterialType.ALL_HARD_METALS, MaterialType.IRON)),
     BOOTS("boots", INameable.suffix("boots"), INameable.suffix("Boots"),
             (material) -> ItemTags.create(Utils.modLoc("boots/" + material.key)),
             Tags.Items.ARMORS_BOOTS,
@@ -162,7 +162,7 @@ public enum MaterialItemType implements INameable, IMaterialModel<Holder.ItemHol
             MaterialItemType::basicArmorModelProvider,
             IRecipe::noRecipe,
             MaterialItemType::registerMaterialTag,
-            Utils.exclude(MaterialType.ALL_HARD_METALS, MaterialType.COPPER, MaterialType.IRON)),
+            Utils.exclude(MaterialType.ALL_HARD_METALS, MaterialType.IRON)),
     ARROW("arrow", INameable.suffix("arrow"), INameable.suffix("Arrow"),
             (material) -> ItemTags.create(Utils.modLoc("arrows/" + material.key)),
             ItemTags.ARROWS,
